@@ -2,6 +2,8 @@
 v6.1.0-git
 ----------
 
+[mms] Convert Data URLs in a reply message into attachments so that compose
+      attachment limits can be enforced (Bug #12167).
 [mms] Allow attachments to be dragged/dropped from local filesystem on the
       dynamic compose page.
 [mms] Hide browser generated file input widget for attachment upload in dynamic
